# ids

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml  biome.jsonc  check_size.py  coco.yml  rustfmt.toml  👨‍🎨 ids.code-workspace  👨🏻‍🎨 ids.code-workspace
.cargo/: config.toml
.github/workflows/: distribute.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: git.rs  lib.rs
cli/src/actions/: action.rs  help.rs  version.rs
public/: index.html
server/: Cargo.toml  Taskfile.yaml  release.toml
server/app/: Cargo.toml
server/app/src/: build_info.rs  main.rs
server/cli/: Cargo.toml
server/cli/src/: git.rs  lib.rs
server/cli/src/actions/: action.rs  help.rs
server/cli/src/shared/: config.rs  print.rs  versioning_data.rs
server/public/: styles.css
server/server/: Cargo.toml
server/server/src/: lib.rs
server/server/src/assets/: matching.rs  mime.rs  mod.rs  resp.rs  runtime_assets.rs
server/server/src/assets/contents/: json.rs
server/server/src/server/: generator.rs  http.rs  mod.rs  watcher.rs
server/server/src/server/http/: websocket.rs
server/src/assets/: matching.rs
server/src/assets/contents/: json.rs
server/src/server/: generator.rs  mod.rs  watcher.rs
src/: main.rs
ui/: .env  .env.production  Taskfile.yaml  bun.lockb  bunfig.toml  index.html  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: app.css  app.tsx
ui/src/components/: footer.comp.tsx  header.comp.tsx  icon-card.cmp.tsx  ids-logo.comp.tsx  lucodear-logo.comp.tsx
ui/src/hooks/: use-ws.hook.tsx
ui/src/pages/: home.page.tsx
ui/src/stores/: contents.fetcher.ts  contents.store.ts
ui/src/stores/types/: api.ts  store.ts
