[workspace]
resolver = "2"
package = { authors = ["lucas@lucode.ar"] }
default-members = ["app"]
members = ["app", "cli", "server"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[workspace.dependencies]
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
] }
lool = { git = "https://github.com/lucodear/lool", version = "0.4.0", features = [
    "macros",
    "cli.stylize",
] }

