[workspace]
resolver = "2"
package = { authors = ["lucas@lucode.ar"] }
default-members = ["app"]
members = ["app", "cli", "server"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[profile.dist]
inherits = "release"

[workspace.dependencies]
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
] }
lool = { git = "https://github.com/lucodear/lool", version = "0.4.0", features = [
    "macros",
    "cli.stylize",
] }


# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.19.1"
ci = "github"
installers = ["npm"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
windows-archive = ".tar.gz"
unix-archive = ".tar.gz"
npm-scope = "@lucodear"
pr-run-mode = "skip"
allow-dirty = ["ci"]
